--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Github</h1>
      <p>sekarang saya akan belajar menggunakan git</p>
-     
+      <h2>cara memakai git</h2>
 </body>
 </html>
