--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <h1>Github</h1>
      <p>sekarang saya akan belajar menggunakan git</p>
       <h2>cara memakai git</h2>
+
+      <form action="">
+          <input type="text" placeholder="login">
+          <input type=" password" placeholder=" passworld">
+          <button type="submit"></button>
+      </form>
 </body>
 </html>
