menambahkan h2 dan paragraf ke dua

--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
           aperiam, eos nesciunt velit dignissimos porro mollitia 
           fuga a iusto sapiente in perferendis dolor facilis fugiat? Quo quis 
           asperiores unde. </p>
+
+    
+        <h2>paragraf ke dua</h2>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Repellat illum necessitatibus eveniet qui odio accusantium veritatis 
+            accusamus optio. Sed, ullam.
+             Debitis animi commodi eius rem omnis magnam iure vero natus.</p>
 </body>
 </html>
